# ModelGuard

./: .env.example  .gitignore  =3.10  README.md  pyproject.toml
config/: default.yaml
examples/: fraud_detection_demo.py  quickstart.py
src/modelguard/: __init__.py  __main__.py
src/modelguard/actions/: __init__.py  recommender.py
src/modelguard/api/: __init__.py  app.py
src/modelguard/baseline/: __init__.py  creator.py  statistics.py
src/modelguard/cli/: __init__.py  main.py
src/modelguard/cli/commands/: alert.py  baseline.py  drift.py  model.py  schedule.py  server.py
src/modelguard/core/: __init__.py  config.py  exceptions.py  interfaces.py  types.py
src/modelguard/drift/: __init__.py  base.py  detector.py
src/modelguard/drift/distance/: __init__.py  jensen_shannon.py  kl_divergence.py  psi.py  wasserstein.py
src/modelguard/drift/statistical/: __init__.py  chi_square.py  ks_test.py
src/modelguard/explainability/: __init__.py  explainer.py
src/modelguard/human_loop/: __init__.py  alert_manager.py  feedback.py
src/modelguard/monitoring/: __init__.py  scheduler.py
src/modelguard/retraining/: __init__.py  orchestrator.py
src/modelguard/severity/: __init__.py  scorer.py
src/modelguard/storage/: __init__.py  database.py  models.py
src/modelguard/storage/repositories/: __init__.py  alert_repo.py  baseline_repo.py  drift_repo.py  job_repo.py  model_repo.py
tests/: __init__.py  test_drift_detection.py
